[gd_scene load_steps=9 format=2]

[ext_resource path="res://Sprites/CometSmall.png" type="Texture" id=1]
[ext_resource path="res://Hitboxes and Hurtboxes/Hurtbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://Hitboxes and Hurtboxes/Hitbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Stats.tscn" type="PackedScene" id=4]
[ext_resource path="res://Enemies/Comets/Comet.gd" type="Script" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 3.0

[sub_resource type="CircleShape2D" id=2]
radius = 4.0

[sub_resource type="CircleShape2D" id=3]
radius = 4.0

[node name="CometShard" type="RigidBody2D" groups=["Comet", "Enemy"]]
gravity_scale = 0.0
script = ExtResource( 5 )
score = 1

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.392157, 0.627451, 0.980392, 0.784314 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Hitbox" parent="." instance=ExtResource( 3 )]
collision_mask = 28
damage = 1
knockback = 10

[node name="CollisionShape2D" parent="Hitbox" index="0"]
shape = SubResource( 2 )

[node name="Hurtbox" parent="." instance=ExtResource( 2 )]
collision_layer = 1

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
shape = SubResource( 3 )

[node name="Stats" parent="." instance=ExtResource( 4 )]
max_health = 1

[node name="TickRate" type="Timer" parent="."]
wait_time = 0.05
autostart = true

[node name="Tween" type="Tween" parent="."]

[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]
[connection signal="timeout" from="TickRate" to="." method="_on_Tick_Rate_timeout"]

[editable path="Hitbox"]
[editable path="Hurtbox"]
